--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://kylejlin.github.io/svg-editor"
 }
